시간표 백엔드 경로 수정 및 회원가입 수정